--- a/.github/workflows/build-aar.yml
+++ b/.github/workflows/build-aar.yml
@@ -17,7 +17,8 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.35.6'
+          flutter-version: '3.37.0'
+          channel: 'master'
 
       - name: Install dependencies
         run: flutter pub get
