--- a/.github/workflows/build-aar.yml
+++ b/.github/workflows/build-aar.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add build/host/outputs/repo
+          git add -f build/host/outputs/repo
           git commit -m "chore: update Flutter AAR [skip ci]" || echo "No changes to commit"
           git push
 
