--- a/.github/workflows/build-aar.yml
+++ b/.github/workflows/build-aar.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   build-aar:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write           # 'write' access to repository contents
+      pull-requests: write      # 'write' access to pull requests
 
     steps:
       - name: Checkout repository
@@ -30,5 +33,10 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add -f build/host/outputs/repo
-          git push
+          git commit -m "Build Flutter AAR"
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.H_PAT }}
+          branch: ${{ github.ref }}
 
